[gd_scene load_steps=2 format=3 uid="uid://egj58neq31r8"]

[ext_resource type="Script" uid="uid://b3yak2oxfvtd4" path="res://scenes/client/shared/alert/alert_ui.gd" id="1_w4kox"]

[node name="AlertUi" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_w4kox")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Margin/VBox/HBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="HideTimer" type="Timer" parent="Margin/VBox"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="HideProgress" type="ProgressBar" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Margin/VBox/HBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="Margin/VBox/HideTimer" to="." method="_on_hide_timer_timeout"]
